--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-uglify-es": "^2.0.0",
     "node-sass": "^4.14.0"
   },
   "dependencies": {
